# public/docs/openapi.yaml
@@ -78,15 +78,15 @@ paths:
                 identifier_number:
                   type: string
                   description: "'user_id' => 'nullable|string|max:255|unique:people',\n'person_type_id' => 'required|integer|exists:person_types,id',\n'city_id' => 'required|integer|exists:cities,id',."
-                  example: enim
+                  example: aliquam
                 blood_group:
                   type: string
                   description: 'Must not be greater than 255 characters.'
-                  example: zvkpjztqynbiwsodjarjwcp
+                  example: p
                 email:
                   type: string
                   description: 'Must not be greater than 255 characters.'
-                  example: qkrajcik@example.org
+                  example: jjacobi@example.org
                 city_id:
                   type: integer
                   description: ''
@@ -94,23 +94,23 @@ paths:
                 first_name:
                   type: string
                   description: 'Must not be greater than 100 characters.'
-                  example: b
+                  example: axdggikkaxbgvgihaot
                 last_name:
                   type: string
                   description: 'Must not be greater than 100 characters.'
-                  example: kxhndxjrrhjsywnlkbmkcger
+                  example: bcaenpgbmtu
                 date_of_birth:
                   type: string
                   description: 'Must be a valid date.'
-                  example: '2024-06-25T20:11:48'
+                  example: '2024-06-26T19:54:31'
                 gender:
                   type: string
                   description: 'Must not be greater than 10 characters.'
-                  example: vwmeslnwh
+                  example: gu
                 phones:
                   type: string
                   description: "'phone' => 'nullable|string|max:20|unique:phones,phone_number',. Must not be greater than 20 characters."
-                  example: zbyi
+                  example: i
               required:
                 - city_id
                 - first_name
@@ -155,35 +155,35 @@ paths:
                 identifier_number:
                   type: string
                   description: ''
-                  example: minima
+                  example: cum
                 blood_group:
                   type: string
                   description: 'Must not be greater than 255 characters.'
-                  example: ldwygwanvttghdsymh
+                  example: p
                 city_id:
                   type: integer
                   description: ''
-                  example: 14
+                  example: 20
                 first_name:
                   type: string
                   description: 'Must not be greater than 100 characters.'
-                  example: hugyix
+                  example: wnswxctax
                 last_name:
                   type: string
                   description: 'Must not be greater than 100 characters.'
-                  example: ep
+                  example: ftunkgdqalmpbvwnnonllgj
                 date_of_birth:
                   type: string
                   description: 'Must be a valid date.'
-                  example: '2024-06-25T20:11:48'
+                  example: '2024-06-26T19:54:31'
                 gender:
                   type: string
                   description: 'Must not be greater than 10 characters.'
-                  example: sjmwpd
+                  example: yxshhq
                 phones:
                   type: string
                   description: 'Must not be greater than 20 characters.'
-                  example: rvdpzoeabwmxqszlycex
+                  example: ayaehozpuv
               required:
                 - city_id
                 - first_name
@@ -208,7 +208,7 @@ paths:
                 patient_id:
                   type: string
                   description: ''
-                  example: repellat
+                  example: mollitia
               required:
                 - patient_id
       security: []
@@ -302,10 +302,96 @@ paths:
       tags:
         - Endpoints
       security: []
+  /api/consultation/update:
+    post:
+      summary: 'Update the specified resource in storage.'
+      operationId: updateTheSpecifiedResourceInStorage
+      description: ''
+      parameters: []
+      responses: {  }
+      tags:
+        - Endpoints
+      requestBody:
+        required: false
+        content:
+          application/json:
+            schema:
+              type: object
+              properties:
+                current_medications:
+                  type: string
+                  description: "'patient_visit_id' => 'required|exists:patient_visits,id',."
+                  example: sint
+                height_cm:
+                  type: number
+                  description: ''
+                  example: 0.75500655
+                weight_kg:
+                  type: number
+                  description: ''
+                  example: 0.84314259
+                allergies:
+                  type: string
+                  description: ''
+                  example: qui
+                reason_for_visit:
+                  type: string
+                  description: ''
+                  example: odio
+                blood_pressure:
+                  type: string
+                  description: ''
+                  example: labore
+                heart_rate:
+                  type: number
+                  description: ''
+                  example: 11172323.5719
+                temperature:
+                  type: number
+                  description: ''
+                  example: 5.22838
+                respiratory_rate:
+                  type: number
+                  description: ''
+                  example: 1547438.6912
+                oxygen_saturation:
+                  type: number
+                  description: ''
+                  example: 20103294.891013
+                past_medical_history:
+                  type: string
+                  description: ''
+                  example: corporis
+                family_medical_history:
+                  type: string
+                  description: ''
+                  example: modi
+                immunization_history:
+                  type: string
+                  description: ''
+                  example: distinctio
+                doctors_notes:
+                  type: string
+                  description: ''
+                  example: possimus
+                diagnosis_ids:
+                  type: object
+                  description: ''
+                  example: null
+                  properties: {  }
+                custom_diagnosis:
+                  type: string
+                  description: ''
+                  example: repudiandae
+                next_appointment:
+                  type: string
+                  description: 'Must be a valid date.'
+                  example: '2024-06-26T19:54:31'
+      security: []
   /api/consultation/get-consultation-data:
     post:
-      summary: 'Display a listing of the resource.'
-      operationId: displayAListingOfTheResource
+      summary: 'CONSULTATION :: Get consultation data.'
+      operationId: cONSULTATIONGetConsultationData
       description: ''
       parameters: []
       responses: {  }
@@ -331,7 +417,7 @@ paths:
                 patient_visit_id:
                   type: string
                   description: ''
-                  example: quia
+                  example: omnis
               required:
                 - patient_visit_id
       security: []
@@ -362,29 +448,27 @@ paths:
         in: path
         name: patient_visit_id
         description: 'The ID of the patient visit.'
-        example: occaecati
+        example: quia
         required: true
         schema:
           type: string
-  /api/diagnosis-codes:
-    get:
+  /api/diagnosis/diagnosis-codes:
+    post:
       summary: 'DIAGNOSIS CODES :: List'
       operationId: dIAGNOSISCODESList
       description: ''
       parameters: []
-      responses:
-        401:
-          description: ''
-          content:
-            application/json:
-              schema:
-                type: object
-                example:
-                  message: Unauthenticated.
-                properties:
-                  message:
-                    type: string
-                    example: Unauthenticated.
+      responses: {  }
+      tags:
+        - Endpoints
+      security: []
+  /api/diagnosis/save-diagnosis:
+    post:
+      summary: 'Store a newly created resource in storage.'
+      operationId: storeANewlyCreatedResourceInStorage
+      description: ''
+      parameters: []
+      responses: {  }
       tags:
         - Endpoints
       security: []
@@ -407,7 +491,7 @@ paths:
                 phone_number:
                   type: string
                   description: 'Must not be greater than 20 characters.'
-                  example: kvgtg
+                  example: nbdti
               required:
                 - phone_number
       security: []
@@ -416,7 +500,7 @@ paths:
         in: path
         name: person_id
         description: 'The ID of the person.'
-        example: vel
+        example: doloremque
         required: true
         schema:
           type: string
